# qainspector

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DelegateLoader.qml  PaintedWidget.cpp  PaintedWidget.hpp  README.md  dbusconnector.cpp  dbusconnector.h  iteminfodialog.cpp  iteminfodialog.h  main.cpp  main.qml  mytreemodel.cpp  mytreemodel.h  mytreemodel2.cpp  mytreemodel2.h  qainspector.json  qainspector.pro  qml.qrc  ru.omprussia.qainspector.desktop  ru.omprussia.qainspector.json  socketconnector.cpp  socketconnector.h  treeviewdialog.cpp  treeviewdialog.h
